# qib

./: .gitignore  .readthedocs.yml  README.rst  ReadMe.md  ReadMe.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
doc/: api.rst  conf.py  index.rst  requirements.txt
doc/_templates/: qib-module-template.rst
doc/tutorials/: basics.ipynb  extending_backend.ipynb
examples/backend/: qib_backend_wmi.ipynb  qst_legend_full.html  qst_legend_simple.html  qst_wmi_qc.ipynb  qst_wmi_qsim.ipynb
examples/chemistry/: integral_with_pyscf.ipynb  tmpwj56de2u
examples/qubitization/: qsp_eigenstate_filtering.ipynb  qsp_time_evolution.ipynb
src/qib/: __init__.py
src/qib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_JW_encoding.py  test_backend.py  test_born_oppenheimer_hamiltonian.py  test_brick_lattice.py  test_circuit.py  test_compact_encoding.py  test_control_instructions.py  test_customized_lattice.py  test_fermi_hubbard_hamiltonian.py  test_field_operator.py  test_fully_connected_lattice.py  test_gates.py  test_heisenberg_hamiltonian.py  test_hexagonal_lattice.py  test_integer_lattice.py  test_ising_hamiltonian.py  test_jordan_wigner_encoding.py  test_lattice.py  test_layered_lattice.py  test_measurement.py  test_molecular_hamiltonian.py  test_odd_face_centered_lattice.py  test_operator.py  test_parity_encoding.py  test_pauli_operator.py  test_qubitization.py  test_simulator.py  test_spin_lattice.py  test_tensor_network.py  test_triangular_lattice.py  test_vqe.py  test_vqe_ucc.py
tests/data/: bell_circuit_tensornet.hdf5  wmi_qc.json  (+1 more)
(+83 files in other folders)
