[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qib"
version = "0.1.0"
description = "Python package for quantum circuits and algorithms"
readme = "README.rst"
authors = [{ name = "TUM Quantum Computing Group" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "requests",
]

[project.urls]
Homepage = "https://github.com/qc-tum/qib"

[tool.setuptools.packages.find]
where = ["src"]
